--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -11,20 +11,24 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           context: frps
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: raymond17/frps
-          tag_with_ref: true
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v2
-        with:
-          context: frps
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io/OWNER/IMAGE-NAME
-          repository: raymondtc/frps
-          tag_with_ref: true
+          tags: raymond17/frps:latest
+          push: true
+      # - name: Push to GitHub Packages
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: frps
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      #     registry: ghcr.io/OWNER/IMAGE-NAME
+      #     repository: raymondtc/frps
+      #     tag_with_ref: true
