--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -23,12 +23,17 @@ jobs:
           context: frps
           tags: raymond17/frps:latest
           push: true
-      # - name: Push to GitHub Packages
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: frps
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-      #     registry: ghcr.io/OWNER/IMAGE-NAME
-      #     repository: raymondtc/frps
-      #     tag_with_ref: true
+      - uses: docker/login-action@v1
+        if: "startsWith(github.ref, 'refs/tags/v')"
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }} # - must be in GitHub Secrets!
+      - name: Push to ghcr.io
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: .
+          context: frps
+          tags: raymondtc/frps:latest
+          push: true
