--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -11,8 +11,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -23,8 +22,8 @@ jobs:
           context: frps
           tags: raymond17/frps:latest
           push: true
-      - uses: docker/login-action@v1
-        if: "startsWith(github.ref, 'refs/tags/v')"
+      - name: Login to ghcr
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
