--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -16,21 +16,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          context: frps
-          tags: raymond17/frps:latest
-          push: true
       - name: Login to ghcr
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }} # - must be in GitHub Secrets!
-      - name: Push to ghcr.io
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and Push
         uses: docker/build-push-action@v2
         with:
           context: frps
-          tags: raymondtc/frps:latest
+          tags: |
+            raymond17/frps:latest
+            ghcr.io/raymondtc/frps:latest
           push: true
