--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -4,10 +4,22 @@ on:
   workflow_dispatch:
   release:
     types: [published]
+  schedule:
+    - cron: '*/0 20 * * *'
 jobs:
+  check_if_exists:
+    name: Check if tag exists
+    runs-on: ubuntu-latest
+    - name: Get Latest Frp Version
+        run: |
+          echo "frp_version=$(curl -s https://api.github.com/repos/fatedier/frp/releases/latest | grep -oP '"tag_name": "v\K(.*)(?=")')" >> $GITHUB_ENV
+          TOKEN=$( curl -sSLd "username=${{ secrets.DOCKERHUB_USERNAME }}&password=${{ secrets.DOCKERHUB_TOKEN }}" https://hub.docker.com/v2/users/login | jq -r ".token" )
+          TAG_EXISTS=$(curl -sH "Authorization: JWT $TOKEN" "https://hub.docker.com/v2/repositories/raymond17/frps/tags/latest/" | jq . | grep tag_status | grep active | wc -l)
+          echo "tag_exits=$TAG_EXISTS" >> $GITHUB_ENV
   push_to_registries:
     name: Push Docker image to multiple registries
     runs-on: ubuntu-latest
+    if: ${{ env.tag_exits != '1' }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -28,7 +40,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: frps
+          build-args:
           tags: |
             raymond17/frps:latest
+            raymond17/frps:${{ env.frp_version }}
             ghcr.io/raymondtc/frps:latest
+            ghcr.io/raymondtc/frps:${{ env.frp_version }}
           push: true
