--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -13,6 +13,7 @@ jobs:
   check_if_exists:
     name: Check if tag exists
     runs-on: ubuntu-latest
+    steps:
     - name: Get Latest Frp Version
         run: |
           echo "frp_version=$(curl -s https://api.github.com/repos/fatedier/frp/releases/latest | grep -oP '"tag_name": "v\K(.*)(?=")')" >> $GITHUB_ENV
