--- a/frpc/frpc.ini
+++ b/frpc/frpc.ini
@@ -1,6 +1,6 @@
 [common]
 server_addr = {{ .Envs.FRP_SERVER_ADDR }}
-server_port = {{ .Env.FRP_SERVER_PORT }}
+server_port = {{ .Envs.FRP_SERVER_PORT }}
 token = {{ .Envs.FRP_TOKEN }}
 tls_enable = true
 
